[package]
name = "contiguous-arena"
description = "Efficient, reusable memory arena for Rust with support for contiguous memory blocks."
license = "Unlicense"
documentation = "https://docs.rs/contiguous-arena"
homepage = "https://github.com/zeozeozeo/contiguous-arena"
repository = "https://github.com/zeozeozeo/contiguous-arena"
categories = ["memory-management", "data-structures"]
keywords = ["arena", "memory", "contiguous", "allocation"]
readme = "README.md"
version = "0.2.0"
edition = "2021"

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
